--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <!-- <base href="https://platinx.exchange/exc/" />  -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" id="description" content="">
-  <title>Jexi</title>
+  <title>Royalbit Exchange</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap-css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -21,7 +21,7 @@
   <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/fontawesome.min.css"> -->
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Open+Sans:400,700%7CTitillium+Web:300,400,700,900%7CMontserrat:400,700">
-  <link href="images/logo-new.png" width="32px" height="32px" rel="icon">
+  <link href="images/logo-new.webp" width="32px" height="32px" rel="icon">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&amp;display=swap"
     media="print" onload="this.media='all'" />
